- Add a loading bar

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,4 +1,19 @@
-<WebView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+ xmlns:android="http://schemas.android.com/apk/res/android" 
+android:orientation="vertical" 
+android:layout_width="fill_parent" 
+android:layout_height="fill_parent" 
+>
+<WebView
     android:id="@+id/webview"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" />
+<ProgressBar android:id="@+id/progress"
+    style="?android:attr/progressBarStyleHorizontal"
+    android:layout_width="fill_parent"
+    android:layout_marginBottom="-7dip"
+    android:layout_height="wrap_content" 
+   	android:layout_alignParentBottom="true"
+    android:padding="0dip">
+</ProgressBar>
+</RelativeLayout>
