--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #37474F;
+    background-color: #1C1D5B;
     color: white;
     font-family: sans-serif;
     text-align: center;
