--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,5 +1,2 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.movim.movim.MainActivity" >
-</menu>
+<menu xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.movim.movim.MainActivity"></menu>
