--- a/assets/style.css
+++ b/assets/style.css
@@ -24,11 +24,11 @@ body {
     margin: 0 auto;
 
     padding: 0 2rem;
-    padding-top: 5rem;
+    padding-top: 6rem;
 
     background-image: url("img/logo_cloud.svg");
-    background-size: auto 2.6rem, 100% 100%;
-    background-position: center 2.25rem;
+    background-size: auto 27px, 100% 100%;
+    background-position: center 20px;
     background-repeat: no-repeat;
 
     font-size: 2rem;
@@ -48,6 +48,20 @@ h2 {
 #error,
 #redirect {
     text-align: center;
+}
+
+#redirect .spinner {
+    background-image: url(img/puff.svg);
+    width: 100%;
+    height: 14rem;
+    position: absolute;
+    top: calc(50% - 12rem);
+    padding-top: 10rem;
+    left: 0;
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: 8rem;
+    opacity: 1;
 }
 
 #list {
@@ -105,7 +119,7 @@ a.button:visited {
 
 a.button:hover {
     cursor: pointer;
-    background-color: rgba(255, 255, 255, 0.4);    
+    background-color: rgba(255, 255, 255, 0.4);
 }
 
 a.button.main {
