--- a/Movim/src/main/assets/style.css
+++ b/Movim/src/main/assets/style.css
@@ -13,6 +13,7 @@
 
 html {
     font-size: 8px;
+    height: 100%;
 }
 
 body {
@@ -24,11 +25,11 @@ body {
     margin: 0 auto;
 
     padding: 0 2rem;
-    padding-top: 6rem;
+    /*padding-top: 6rem;*/
 
-    background-image: url("img/logo_cloud.svg");
-    background-size: auto 27px, 100% 100%;
-    background-position: center 20px;
+    background-image: /*url("img/logo_cloud.svg"), */radial-gradient(circle farthest-corner at right bottom,#5265ce 0,#213399 100%);
+    background-size: /*auto 27px, */100% 100%;
+    background-position: /*center 20px, */center;
     background-repeat: no-repeat;
 
     font-size: 2rem;
@@ -51,7 +52,7 @@ h2 {
 }
 
 #redirect .spinner {
-    background-image: url(img/puff.svg);
+    background-image: url(img/movim_cloud.svg);
     width: 100%;
     height: 14rem;
     position: absolute;
@@ -60,7 +61,7 @@ h2 {
     left: 0;
     background-position: top center;
     background-repeat: no-repeat;
-    background-size: 8rem;
+    background-size: 11rem;
     opacity: 1;
 }
 
