--- a/Movim/src/main/res/layout/activity_main.xml
+++ b/Movim/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:fitsSystemWindows="true">
 
     <WebView
         android:id="@+id/webview"
