--- a/Movim/src/main/res/layout/activity_main.xml
+++ b/Movim/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
+    android:layout_marginTop="-24dp"
     android:fitsSystemWindows="true">
 
     <WebView
