--- a/Movim/src/main/res/values/styles.xml
+++ b/Movim/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
     </style>
     <style name="SplashTheme">
         <item name="android:windowTranslucentStatus">true</item>
