--- a/Movim/src/main/assets/style.css
+++ b/Movim/src/main/assets/style.css
@@ -27,9 +27,9 @@ body {
     padding: 0 2rem;
     padding-top: 3rem;
 
-    background-image: /*url("img/logo_cloud.svg"), */radial-gradient(circle farthest-corner at right bottom,#5265ce 0,#213399 100%);
-    background-size: /*auto 27px, */100% 100%;
-    background-position: /*center 20px, */center;
+    background-image: radial-gradient(circle farthest-corner at right bottom,#5265ce 0,#213399 100%);
+    background-size: 100% 100%;
+    background-position: center;
     background-repeat: no-repeat;
 
     font-size: 2rem;
